@@ -8,19 +8,15 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
-import javax.enterprise.context.ApplicationScoped;
-import javax.enterprise.event.Event;
-import javax.inject.Inject;
-import javax.validation.constraints.NotBlank;
-import javax.ws.rs.GET;
-import javax.ws.rs.Path;
-import javax.ws.rs.PathParam;
-import javax.ws.rs.Produces;
-import javax.ws.rs.QueryParam;
-import javax.ws.rs.core.MediaType;
-import javax.ws.rs.core.Response;
-import javax.ws.rs.core.Response.Status;
-
+import org.apache.commons.lang3.StringUtils;
+import org.eclipse.microprofile.openapi.annotations.Operation;
+import org.eclipse.microprofile.openapi.annotations.enums.ParameterIn;
+import org.eclipse.microprofile.openapi.annotations.enums.SchemaType;
+import org.eclipse.microprofile.openapi.annotations.media.Content;
+import org.eclipse.microprofile.openapi.annotations.media.Schema;
+import org.eclipse.microprofile.openapi.annotations.parameters.Parameter;
+import org.eclipse.microprofile.openapi.annotations.parameters.Parameters;
+import org.eclipse.microprofile.openapi.annotations.responses.APIResponse;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -36,6 +32,18 @@ import de.egladil.web.mk_kataloge.domain.Katalogtyp;
 import de.egladil.web.mk_kataloge.domain.event.DataInconsistencyRegistered;
 import de.egladil.web.mk_kataloge.domain.event.LoggableEventDelegate;
 import de.egladil.web.mk_kataloge.domain.event.SecurityIncidentRegistered;
+import jakarta.enterprise.context.ApplicationScoped;
+import jakarta.enterprise.event.Event;
+import jakarta.inject.Inject;
+import jakarta.validation.constraints.NotBlank;
+import jakarta.ws.rs.GET;
+import jakarta.ws.rs.Path;
+import jakarta.ws.rs.PathParam;
+import jakarta.ws.rs.Produces;
+import jakarta.ws.rs.QueryParam;
+import jakarta.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.Response;
+import jakarta.ws.rs.core.Response.Status;
 
 /**
  * KatalogsucheResource
@@ -45,7 +53,7 @@ import de.egladil.web.mk_kataloge.domain.event.SecurityIncidentRegistered;
 @Produces(MediaType.APPLICATION_JSON)
 public class KatalogsucheResource {
 
-	private static final Logger LOG = LoggerFactory.getLogger(KatalogsucheResource.class);
+	private static final Logger LOGGER = LoggerFactory.getLogger(KatalogsucheResource.class);
 
 	@Inject
 	KatalogsucheFacade katalogsucheFacade;
@@ -56,6 +64,9 @@ public class KatalogsucheResource {
 	@Inject
 	Event<SecurityIncidentRegistered> securityEvent;
 
+	@Inject
+	LoggableEventDelegate eventDelegate;
+
 	/**
 	 *
 	 */
@@ -65,10 +76,35 @@ public class KatalogsucheResource {
 
 	@GET
 	@Path("global/{typ}")
+	@Operation(
+		operationId = "findItems", summary = "Gibt alle KatalogItems vom Typ typ zurück, die auf die gegebene Suchanfrage passen.")
+	@Parameters({
+		@Parameter(
+			in = ParameterIn.PATH,
+			name = "typ",
+			required = true,
+			description = "Katalogtyp: LAND, ORT, SCHULE"),
+		@Parameter(
+			in = ParameterIn.QUERY,
+			required = true,
+			name = "search", description = "Suchstring, mit dem nach KatalogItems im Namen gesucht wird."),
+	})
+	@APIResponse(
+		name = "OKResponse",
+		responseCode = "200",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(type = SchemaType.ARRAY, implementation = KatalogItem.class)))
+	@APIResponse(
+		name = "BadRequest",
+		responseCode = "400",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = ResponsePayload.class)))
 	public Response findItems(@PathParam(
 		value = "typ") final String typ, @NotBlank @StringLatin @QueryParam("search") final String searchTerm) {
 
-		LOG.debug("{} - {}", typ, searchTerm);
+		LOGGER.debug("{} - {}", typ, searchTerm);
 
 		Response response = validateSearchTerm(searchTerm);
 
@@ -99,8 +135,8 @@ public class KatalogsucheResource {
 
 			default:
 				String msg = "Aufruf von findItems mit unerwartetem Katalogtyp " + typ + ": geben leeres result zurück";
-				LOG.warn(msg);
-				new LoggableEventDelegate().fireDataInconsistencyEvent(msg, dataInconsistencyEvent);
+				LOGGER.warn(msg);
+				eventDelegate.fireDataInconsistencyEvent(msg, dataInconsistencyEvent);
 				ResponsePayload responsePayload = ResponsePayload.messageOnly(MessagePayload.error("Unbeannte URL"));
 				return Response.status(Status.NOT_FOUND).entity(responsePayload).build();
 			}
@@ -110,16 +146,42 @@ public class KatalogsucheResource {
 		} catch (IllegalArgumentException e) {
 
 			String msg = "Aufruf von findItems mit ungültigem typ-Parameter " + typ;
-			LOG.warn(msg);
-			new LoggableEventDelegate().fireSecurityEvent(msg, securityEvent);
-			ResponsePayload responsePayload = ResponsePayload.messageOnly(MessagePayload.error("Fehlerhafte URL"));
-			return Response.status(Status.NOT_FOUND).entity(responsePayload).build();
+			LOGGER.warn(msg);
+			eventDelegate.fireSecurityEvent(msg, securityEvent);
+			ResponsePayload responsePayload = ResponsePayload.messageOnly(MessagePayload.error("Fehlerhafte URL: typ=" + typ));
+			return Response.status(Status.BAD_REQUEST).entity(responsePayload).build();
 
 		}
 	}
 
 	@GET
 	@Path("laender/{land}/orte")
+	@Operation(
+		operationId = "findOrteInLand", summary = "Gibt alle Orte im gegebenen Land zurück, deren Name mit dem Suchstring beginnt.")
+	@Parameters({
+		@Parameter(
+			in = ParameterIn.PATH,
+			name = "land",
+			required = true,
+			description = "Kürzel des Lands im Schulkatalog"),
+		@Parameter(
+			in = ParameterIn.QUERY,
+			name = "search",
+			required = true,
+			description = "Anfangsbuchstaben des Ortsnamens"),
+	})
+	@APIResponse(
+		name = "OKResponse",
+		responseCode = "200",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(type = SchemaType.ARRAY, implementation = ResponsePayload.class)))
+	@APIResponse(
+		name = "BadRequest",
+		responseCode = "400",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = ResponsePayload.class)))
 	public Response findOrteInLand(@LandKuerzel @PathParam(
 		value = "land") final String landKuerzel, @NotBlank @StringLatin @QueryParam("search") final String searchTerm) {
 
@@ -143,7 +205,7 @@ public class KatalogsucheResource {
 	 */
 	private Response validateSearchTerm(final String searchTerm) {
 
-		if (searchTerm.isBlank()) {
+		if (StringUtils.isBlank(searchTerm)) {
 
 			ResponsePayload payload = new ResponsePayload(MessagePayload.error("Die Eingaben sind nicht korrekt."),
 				Arrays.asList(
@@ -170,10 +232,36 @@ public class KatalogsucheResource {
 
 	@GET
 	@Path("orte/{ort}/schulen")
+	@Operation(
+		operationId = "findSchulenInOrt", summary = "Gibt alle Schulen im gegebenen Ort zurück, deren Name den Suchstring enthält.")
+	@Parameters({
+		@Parameter(
+			in = ParameterIn.PATH,
+			name = "ort",
+			required = true,
+			description = "Kürzel des Orts im Schulkatalog"),
+		@Parameter(
+			in = ParameterIn.QUERY,
+			name = "search",
+			required = true,
+			description = "Teil des Schulnamens"),
+	})
+	@APIResponse(
+		name = "OKResponse",
+		responseCode = "200",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(type = SchemaType.ARRAY, implementation = KatalogItem.class)))
+	@APIResponse(
+		name = "BadRequest",
+		responseCode = "400",
+		content = @Content(
+			mediaType = "application/json",
+			schema = @Schema(implementation = ResponsePayload.class)))
 	public Response findSchulenInOrt(@Kuerzel @PathParam(
 		value = "ort") final String ortKuerzel, @NotBlank @StringLatin @QueryParam("search") final String searchTerm) {
 
-		LOG.debug("{} - {}", ortKuerzel, searchTerm);
+		LOGGER.debug("{} - {}", ortKuerzel, searchTerm);
 
 		Response response = validateSearchTerm(searchTerm);
 
